2012-05-04  Nate Chapin  <japhet@chromium.org>

        Don't require FrameLoaderClient to manufacture a commitData() call for empty documents.
        https://bugs.webkit.org/show_bug.cgi?id=85533

        Reviewed by Alexey Proskuryakov.

        * WebKitSupport/FrameLoaderClientWx.cpp:
        (WebCore::FrameLoaderClientWx::finishedLoading):
        (WebCore::FrameLoaderClientWx::setMainDocumentError):
        (WebCore::FrameLoaderClientWx::dispatchDidReceiveResponse):
        (WebCore::FrameLoaderClientWx::dispatchDidFailLoading):
        * WebKitSupport/FrameLoaderClientWx.h:
        (FrameLoaderClientWx):

2012-04-18  Jon Honeycutt  <jhoneycutt@apple.com>

        FrameLoaderClient::dispatchWillSendSubmitEvent() should be given more
        information about the form being submitted
        https://bugs.webkit.org/show_bug.cgi?id=84297

        Reviewed by Andy Estes.

        * WebKitSupport/FrameLoaderClientWx.h:
        (WebCore::FrameLoaderClientWx::dispatchWillSendSubmitEvent):
        Updated method declaration.

2012-03-30  Malcolm MacLeod  <malcolm.macleod@tshwanedje.com>

        [wx] Move wxWebKit API into WebKit namespace.
        https://bugs.webkit.org/show_bug.cgi?id=82740

        Reviewed by Kevin Ollivier.

        * WebBrowserShell.cpp:
        (WebKit):
        (WebKit::PageSourceViewFrame::PageSourceViewFrame):
        (WebKit::WebBrowserShell::WebBrowserShell):
        (WebKit::WebBrowserShell::~WebBrowserShell):
        (WebKit::WebBrowserShell::ShowDebugMenu):
        (WebKit::WebBrowserShell::OnQuit):
        (WebKit::WebBrowserShell::OnAbout):
        (WebKit::WebBrowserShell::OnLoadFile):
        (WebKit::WebBrowserShell::OnLoadEvent):
        (WebKit::WebBrowserShell::OnBeforeLoad):
        (WebKit::WebBrowserShell::OnAddressBarEnter):
        (WebKit::WebBrowserShell::OnSearchCtrlEnter):
        (WebKit::WebBrowserShell::OnCut):
        (WebKit::WebBrowserShell::OnCopy):
        (WebKit::WebBrowserShell::OnPaste):